09 Admin/Terminal Saved Chats/broken1.txt
Last login: Thu Apr 30 16:41:31 on ttys001
medapp
jd@JD-MacBook-Pro ~ % medapp
jd@JD-MacBook-Pro ~ % >....                                                     
echo ""
echo "Backup saved:"
echo "$BACKUP"
echo ""

swiftc "$SRC" \
  -parse-as-library \
  -o /tmp/MedicalSchoolHubTest \
  -framework SwiftUI \
  -framework AppKit

if [ $? -eq 0 ]; then
  echo "Swift compile test passed."
else
  echo "Swift compile test failed. Stop here and paste the errors."
  exit 1
fi

"$BASE/09 Admin/App Framework/build_medical_hub_app.sh"

echo ""
echo "Opening app..."
open "$HOME/Applications/Medical School Hub.app"
Course tracker cockpit patch complete.

Backup saved:
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.backup.2026-04-30_16-43-53.swift

/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:364:13: warning: variable 'lines' was never mutated; consider changing to 'let' constant
        var lines = raw.components(separatedBy: .newlines).filter { !$0.trimmingCharacters(in: .whitespaces).isEmpty }
        ~~~ ^
        let
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:697:21: error: cannot find 'TrackerHero' in scope
                    TrackerHero(title: "Total", value: "\(items.count)", symbol: "list.bullet.rectangle")
                    ^~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:698:21: error: cannot find 'TrackerHero' in scope
                    TrackerHero(title: "Completed", value: "\(completedCount)", symbol: "checkmark.seal")
                    ^~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:699:21: error: cannot find 'TrackerHero' in scope
                    TrackerHero(title: "Mastered", value: "\(masteredCount)", symbol: "crown")
                    ^~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:700:21: error: cannot find 'TrackerHero' in scope
                    TrackerHero(title: "Needs Work", value: "\(needsWorkCount)", symbol: "flame")
                    ^~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:701:21: error: cannot find 'TrackerHero' in scope
                    TrackerHero(title: "Practice", value: "\(practiceItems.count)", symbol: "questionmark.bubble")
                    ^~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:1391:25: warning: result of call to 'shell' is unused
                        shell("open \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:1395:25: warning: result of call to 'shell' is unused
                        shell("open -R \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Swift compile test failed. Stop here and paste the errors.

Saving session...
...copying shared history...
...saving history...truncating history files...
...completed.

[Process completed]

